[package]
name = "vhost_user_block"
version = "0.1.0"
authors = ["The Cloud Hypervisor Authors"]
edition = "2021"

[dependencies]
block_util = { path = "../block_util" }
clap = { version = "4.4.7", features = ["wrap_help", "cargo"] }
env_logger = "0.9.3"
epoll = "4.3.1"
libc = "0.2.137"
log = "0.4.17"
option_parser = { path = "../option_parser" }
qcow = { path = "../qcow" }
vhost = { version = "0.10.0", features = ["vhost-user-backend"] }
vhost-user-backend = "0.13.1"
virtio-bindings = "0.1.0"
virtio-queue = "0.11.0"
vm-memory = "0.14.1"
vmm-sys-util = "0.12.1"

[build-dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
